syntax = "proto3";

import "common.proto";

package pb;

service ServerDispatcher {
    rpc Check(HealthCheckReq) returns (HealthCheckRes);
    rpc Register (RegisterReq) returns (RegisterRes);
    rpc GetNextServer (GetNextServerReq) returns (GetNextServerRes);
}

message RegisterReq {
    bytes certificate = 1;
}

message RegisterRes {
    enum RequestStatus {
        UNKNOWN = 0;
        REGISTERED = 1;
        NOT_REGISTERED = 2;
    }
    RequestStatus status = 1;
}

message GetNextServerReq {}

message GetNextServerRes {
    string ip = 1;
    bytes certificate = 2;
}